WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55190
Crash when trying to send a sync message on an invalid connection
https://bugs.webkit.org/show_bug.cgi?id=55190
Summary
Crash when trying to send a sync message on an invalid connection
Anders Carlsson
Reported
2011-02-24 15:36:35 PST
Crash when trying to send a sync message on an invalid connection
Attachments
Patch
(1.38 KB, patch)
2011-02-24 15:39 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-02-24 15:39:06 PST
Created
attachment 83734
[details]
Patch
mitz
Comment 2
2011-02-24 15:40:25 PST
Comment on
attachment 83734
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=83734&action=review
> Source/WebKit2/ChangeLog:11 > + Don't try to call a client function is isValid() returns false since the client
s/n is/n if/
Anders Carlsson
Comment 3
2011-02-24 15:40:58 PST
Committed
r79634
: <
http://trac.webkit.org/changeset/79634
>
Alexey Proskuryakov
Comment 4
2011-02-24 22:52:18 PST
So, all callers of sendSync() need to test for null return value again? This can't be right.
Anders Carlsson
Comment 5
2011-02-25 09:54:52 PST
(In reply to
comment #4
)
> So, all callers of sendSync() need to test for null return value again? This can't be right.
You obviously can't call the client since the client is null!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug