2011-02-24  Anders Carlsson  <andersca@apple.com>

Reviewed by Dan Bernstein.

        Crash when trying to send a sync message on an invalid connection
        https://bugs.webkit.org/show_bug.cgi?id=55190
        <rdar://problem/9035806>

        * Platform/CoreIPC/Connection.cpp:
        (CoreIPC::Connection::sendSyncMessage):
        Don't try to call a client function if isValid() returns false since the client
        will be null in that case.


Canonical link: https://commits.webkit.org/69553@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79634 268f45cc-cd09-0410-ab3c-d52691b4dbfc