Source/WebKit2/Platform/CoreIPC/Connection.cpp
@@ -343,10 +343,8 @@ PassOwnPtr<ArgumentDecoder> Connection::sendSyncMessage(MessageID messageID, uin
     // We only allow sending sync messages from the client run loop.
     ASSERT(RunLoop::current() == m_clientRunLoop);
 
-    if (!isValid()) {
-        m_client->didFailToSendSyncMessage(this);
+    if (!isValid())
         return 0;
-    }
     
     // Push the pending sync reply information on our stack.
     {
